--- a/index.html
+++ b/index.html
@@ -37,9 +37,230 @@
                 <p>A creative practice © 2024</p>
                 <p>naming, identity, strategy</p>
             </div>
-
         </article>
+
+        <article id="links">
+            <h3 class="component__name">links</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/links.png" width="500px">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <p>Studio</p>
+                <p>Shop:<br> Planteary Agenda</p>
+                <p>Play</p>
+                <p>Ready to work together?</p>
+            </div>
+        </article>
+
+        <!-------Atoms------->
+
+        <h3 class="component-page__section-heading">Atoms</h3>
+
+        <article id="wordmark">
+            <h3 class="component__name">.wordmark</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/wordmark.png" width="500px">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="wordmark">Shirakaba</div>
+            </div>
+        </article>
+
+        <article id="bullet">
+            <h3 class="component__name">.bullet</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/bullet.png" width="50px">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="bullet"></div>
+            </div>
+        </article>
+
+        <article id="section-heading">
+            <h3 class="component__name">.section-heading</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/section-heading.png" width="200px">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="section-heading">The Work</div>
+            </div>
+        </article>
+
+        <!-------Main nav------->
+
+        <h3 class="component-page__section-heading">Main Nav</h3>
+
+        <article id="main-nav">
+            <h3 class="component__name">.main-nav</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/main-nav.png">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="main-nav"></div>
+            </div>
+        </article>
+
+        <!-------Nav List------->
+
+        <h3 class="component-page__section-heading">Nav List</h3>
+
+        <article id="nav-list">
+            <h3 class="component__name">.main-nav__list</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/main-nav__list.png">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="main-nav__list"></div>
+            </div>
+        </article>
+
+        <!-------Gallery------->
+
+        <h3 class="component-page__section-heading">Gallery</h3>
+
+        <article id="gallery">
+            <h3 class="component__name">.gallery</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/gallery.png">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="gallery"></div>
+            </div>
+        </article>
+
+        <article id="gallery__img">
+            <h3 class="component__name">.gallery__img</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/gallery__img.png">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="gallery__img"></div>
+            </div>
+        </article>
+
+        <!-------Work------->
+
+        <h3 class="component-page__section-heading">Work</h3>
+
+        <article id="gallery">
+            <h3 class="component__name">.work</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/work.png" width="1000px">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="work"></div>
+            </div>
+        </article>
+
+        <article id="work__text">
+            <h3 class="component__name">.work__text</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/work__text.png">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="work__text"></div>
+            </div>
+        </article>
+
+        <article id="work__img">
+            <h3 class="component__name">.work__img</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/work__img.png">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="work__img"></div>
+            </div>
+        </article>
+
+        <!-------Featured------->
+
+        <h3 class="component-page__section-heading">Featured</h3>
+
+        <article id="featured">
+            <h3 class="component__name">.featured</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/featured.png" width="1000px">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="featured"></div>
+            </div>
+        </article>
+
+        <!-------Playlist------->
+
+        <h3 class="component-page__section-heading">Playlist</h3>
+
+        <article id="playlist">
+            <h3 class="component__name">.playlist</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/playlist.png" width="1000px">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="playlist"></div>
+            </div>
+        </article> 
+
+        <!-------Footer------->
+
+        <h3 class="component-page__section-heading">Footer</h3>
+
+        <article id="footer">
+            <h3 class="component__name">.footer</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/footer.png" width="1000px">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="footer"></div>
+            </div>
+        </article> 
+
+
+        <article id="footer__list">
+            <h3 class="component__name">.footer__list</h3>
+            <div class="component__image">
+                <div class="tag"><p>img</p></div>
+                <img src="images/screenshots/footer__list.png" width="1000px">
+            </div>
+            <div class="component__code">
+                <div class="tag"><p>code</p></div>
+                <div class="footer__list"></div>
+            </div>
+        </article> 
+
+
+
     </section>
+
+        
+  
 
     </div>
 
