--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <p>A creative practice © 2024</p>
-                <p>naming, identity, strategy</p>
+                <h2>A creative practice © 2024</h2>
+                <p class="body">naming, identity, strategy</p>
             </div>
         </article>
 
