--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             <h3 class="component__name">links</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/links.png" width="500px">
+                <img src="images/screenshots/links.png" width="1000px">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <p>Studio</p>
-                <p>Shop:<br> Planteary Agenda</p>
-                <p>Play</p>
-                <p>Ready to work together?</p>
+                <p class="link__s">Studio</p>
+                <p class="link__l">Shop:<br> Planteary<br> Agenda</p>
+                <p class="link__m">Play</p>
+                <p class="link__xl">Ready to work together?</p>
             </div>
         </article>
 
@@ -66,7 +66,7 @@
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <div class="wordmark">Shirakaba</div>
+                <img src="images/wordmark/shirakaba.svg" class="wordmark">
             </div>
         </article>
 
@@ -102,11 +102,24 @@
             <h3 class="component__name">.main-nav</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/main-nav.png">
+                <img src="images/screenshots/main-nav.png" width="1000px">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <div class="main-nav"></div>
+
+                <div class="main-nav">
+                    <div class="main-nav__list-flex_wrap">
+                    <div class=bullet></div>
+                    <div class="main-nav__list">
+                        <div class="link__s">Studio</div>
+                        <div class="link__s">Ethos</div>
+                        <div class="link__s">House</div>
+                        <div class="link__s">Store</div>
+                    </div>
+                    </div>
+                    <img src="images/wordmark/shirakaba.svg" class="wordmark">
+                    <h2>A creative practice © 2024</h2>
+                </div>
             </div>
         </article>
 
@@ -122,7 +135,16 @@
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <div class="main-nav__list"></div>
+                <div class="main-nav">
+                    <div class="main-nav__list-flex_wrap">
+                    <div class=bullet></div>
+                    <div class="main-nav__list">
+                        <div class="link__s">Studio</div>
+                        <div class="link__s">Ethos</div>
+                        <div class="link__s">House</div>
+                        <div class="link__s">Store</div>
+                    </div>
+                    </div>
             </div>
         </article>
 
@@ -138,7 +160,12 @@
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <div class="gallery"></div>
+                <div class="gallery">
+                    <img src="images/carousel-section/carousel_1.jpg" class="gallery__img">
+                    <img src="images/carousel-section/carousel_2.jpg" class="gallery__img">
+                    <img src="images/carousel-section/carousel_3.jpg" class="gallery__img">
+                    <img src="images/carousel-section/carousel_4.jpg" class="gallery__img">
+                </div>
             </div>
         </article>
 
@@ -150,7 +177,9 @@
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <div class="gallery__img"></div>
+                <div class="gallery__img">
+                    <img src="images/carousel-section/carousel_1.jpg" class="gallery__img">
+                </div>
             </div>
         </article>
 
@@ -166,7 +195,69 @@
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <div class="work"></div>
+                <div class="work">
+                    <div class="section-heading">The Work</div>
+                    <div class="work__wrapper">
+                    <img src="images/work-section/shirakaba-house.jpeg" class="work__img">
+                    <div class="work__text-wrapper">
+                        <div class="work__text-border-top">
+                            <div class="body"><strong>Superlap</strong></div>
+                            <div class="body">Naming, Identity, Strategy</div>
+                            <div class="body">Detroit, Mi</div>
+                            <div class="body">2024</div>
+                        </div>
+                        <div class="work__text">
+                            <div class="body"><strong>Hesita</strong></div>
+                            <div class="body">Identity, Packaging & Web Design</div>
+                            <div class="body">Durham, NC</div>
+                            <div class="body">2023</div>
+                        </div>
+                        <div class="work__text">
+                            <div class="body"><strong>Commonwealth</strong></div>
+                            <div class="body">Identity, Website, Social</div>
+                            <div class="body">Detroit, Mi</div>
+                            <div class="body">2024</div>
+                        </div>
+                        <div class="work__text">
+                            <div class="body"><strong>Studio Vera</strong></div>
+                            <div class="body">Identity, Website, Social</div>
+                            <div class="body">Detroit, Mi</div>
+                            <div class="body">2024</div>
+                        </div>
+                        <div class="work__text">
+                            <div class="body"><strong>Propeller</strong></div>
+                            <div class="body">Naming, Identity, Website</div>
+                            <div class="body">San Francisco, Ca</div>
+                            <div class="body">2023</div>
+                        </div>
+                        <div class="work__text">
+                            <div class="body"><strong>Meijer</strong></div>
+                            <div class="body">Identity, Web, Signage</div>
+                            <div class="body">Grand Rapids, Mi</div>
+                            <div class="body">2024</div>
+                        </div>
+                        <div class="work__text">
+                            <div class="body"><strong>Lalo</strong></div>
+                            <div class="body">Social & Email Strategy</div>
+                            <div class="body">New York, NY</div>
+                            <div class="body">2023</div>
+                        </div>
+                        <div class="work__text">
+                            <div class="body"><strong>Treasury Prime</strong></div>
+                            <div class="body">Digital Product & Web Design</div>
+                            <div class="body">San Francisco, CA</div>
+                            <div class="body">2023</div>
+                        </div>
+                        <div class="work__text">
+                            <div class="body"><strong>Your Project Here</strong></div>
+                            <div class="body">Let's Work Together</div>
+                            <div class="body">Click Here</div>
+                            <div class="body">2024</div>
+                        </div>
+                        
+                        </div>
+                    </div>
+                </div>
             </div>
         </article>
 
@@ -178,7 +269,34 @@
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <div class="work__text"></div>
+
+                <div class="work__text-wrapper">
+                <div class="work__text">
+                    <div class="body"><strong>Superlap</strong></div>
+                    <div class="body">Naming, Identity, Strategy</div>
+                    <div class="body">Detroit, Mi</div>
+                    <div class="body">2024</div>
+                </div>
+                <div class="work__text">
+                    <div class="body"><strong>Hesita</strong></div>
+                    <div class="body">Identity, Packaging & Web Design</div>
+                    <div class="body">Durham, NC</div>
+                    <div class="body">2023</div>
+                </div>
+                <div class="work__text">
+                    <div class="body"><strong>Commonwealth</strong></div>
+                    <div class="body">Identity, Website, Social</div>
+                    <div class="body">Detroit, Mi</div>
+                    <div class="body">2024</div>
+                </div>
+                <div class="work__text">
+                    <div class="body"><strong>Studio Vera</strong></div>
+                    <div class="body">Identity, Website, Social</div>
+                    <div class="body">Detroit, Mi</div>
+                    <div class="body">2024</div>
+                </div>
+                </div>
+
             </div>
         </article>
 
@@ -190,7 +308,7 @@
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <div class="work__img"></div>
+                <img src="images/work-section/shirakaba-house.jpeg" class="work__img">
             </div>
         </article>
 
@@ -206,7 +324,15 @@
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <div class="featured"></div>
+                <div class="featured">
+                    <p class="link__l">Tour<br> Shirakaba<br>House</p>
+                    <p class="link__l">Featured<br> Project<br> Hesita</p>
+                    <p class="link__l">Shop:<br> Planteary<br> Agenda</p>
+                    <img class="featured__img" src="images/links-section/links_1.jpg">
+                    <img class="featured__img" src="images/links-section/links_2.jpg">
+                    <img class="featured__img" src="images/links-section/links_3.jpg">
+                    <img class="featured__img" src="images/links-section/links_4.jpg">
+                </div>
             </div>
         </article>
 
@@ -222,7 +348,17 @@
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <div class="playlist"></div>
+                <div class="playlist">
+                    <p class="link__l">Playlist<br>Vol.1</p>
+                    <p class="link__l">Playlist<br>Vol.2</p>
+                    <p class="link__l">Playlist<br>Vol.3</p>
+                    <img class="playlist__img" src="images/playlist-section/playlist_1.jpg">
+                    <img class="playlist__img" src="images/playlist-section/playlist_2.jpg">
+                    <img class="playlist__img" src="images/playlist-section/playlist_3.jpg">
+                    <p class="link__m">Play</p>
+                    <p class="link__m">Play</p>
+                    <p class="link__m">Play</p>
+                </div>
             </div>
         </article> 
 
@@ -238,7 +374,15 @@
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <div class="footer"></div>
+                <div class="footer">
+                    <img class="wordmark" src="images/wordmark/shirakaba.svg">
+                    <div class="footer__list">
+                        <div class="link__footer">Studio</div>
+                        <div class="link__footer">Ethos</div>
+                        <div class="link__footer">Contact</div>
+                        <div class="link__footer">Instagram</div>
+                </div>
+                </div>
             </div>
         </article> 
 
@@ -251,7 +395,13 @@
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <div class="footer__list"></div>
+                <div class="footer__list">
+                        <div class="link__footer">Studio</div>
+                        <div class="link__footer">Ethos</div>
+                        <div class="link__footer">Contact</div>
+                        <div class="link__footer">Instagram</div>
+                </div>
+                </div>
             </div>
         </article> 
 
