--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://use.typekit.net/ygh6zaz.css">
     <title>Shirakaba.studio Design System Study</title>
 </head>
@@ -23,14 +23,14 @@
 
         <!-------Typography------->
 
-    <section class="page-section" id="typography">
+    <section class="page-section">
         <h3 class="component-page__section-heading">Typography</h3>
 
         <article id="typography">
             <h3 class="component__name">H2, Body</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/typography.png" width="500px">
+                <img src="images/screenshots/typography.png" width="500" alt="typography screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
@@ -43,7 +43,7 @@
             <h3 class="component__name">links</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/links.png" width="1000px">
+                <img src="images/screenshots/links.png" width="1000" alt="links screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
@@ -62,11 +62,11 @@
             <h3 class="component__name">.wordmark</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/wordmark.png" width="500px">
+                <img src="images/screenshots/wordmark.png" width="500" alt="wordmark screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <img src="images/wordmark/shirakaba.svg" class="wordmark">
+                <img src="images/wordmark/shirakaba.svg" class="wordmark" alt="wordmark">
             </div>
         </article>
 
@@ -74,7 +74,7 @@
             <h3 class="component__name">.bullet</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/bullet.png" width="50px">
+                <img src="images/screenshots/bullet.png" width="50" alt="bullet screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
@@ -86,7 +86,7 @@
             <h3 class="component__name">.section-heading</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/section-heading.png" width="200px">
+                <img src="images/screenshots/section-heading.png" width="200" alt="section heading screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
@@ -102,7 +102,7 @@
             <h3 class="component__name">.main-nav</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/main-nav.png" width="1000px">
+                <img src="images/screenshots/main-nav.png" width="1000" alt="main nav screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
@@ -117,7 +117,7 @@
                         <div class="link__s">Store</div>
                     </div>
                     </div>
-                    <img src="images/wordmark/shirakaba.svg" class="wordmark">
+                    <img src="images/wordmark/shirakaba.svg" class="wordmark" alt="wordmark">
                     <h2>A creative practice © 2024</h2>
                 </div>
             </div>
@@ -131,7 +131,7 @@
             <h3 class="component__name">.main-nav__list</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/main-nav__list.png">
+                <img src="images/screenshots/main-nav__list.png" alt="nav list screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
@@ -144,9 +144,11 @@
                         <div class="link__s">House</div>
                         <div class="link__s">Store</div>
                     </div>
-                    </div>
+                </div>
+            </div>
             </div>
         </article>
+    
 
         <!-------Gallery------->
 
@@ -156,15 +158,15 @@
             <h3 class="component__name">.gallery</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/gallery.png">
+                <img src="images/screenshots/gallery.png" alt="gallery screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
                 <div class="gallery">
-                    <img src="images/carousel-section/carousel_1.jpg" class="gallery__img">
-                    <img src="images/carousel-section/carousel_2.jpg" class="gallery__img">
-                    <img src="images/carousel-section/carousel_3.jpg" class="gallery__img">
-                    <img src="images/carousel-section/carousel_4.jpg" class="gallery__img">
+                    <img src="images/carousel-section/carousel_1.jpg" class="gallery__img" alt="carousel image">
+                    <img src="images/carousel-section/carousel_2.jpg" class="gallery__img" alt="carousel image">
+                    <img src="images/carousel-section/carousel_3.jpg" class="gallery__img" alt="carousel image">
+                    <img src="images/carousel-section/carousel_4.jpg" class="gallery__img" alt="carousel image">
                 </div>
             </div>
         </article>
@@ -173,12 +175,12 @@
             <h3 class="component__name">.gallery__img</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/gallery__img.png">
+                <img src="images/screenshots/gallery__img.png" alt="gallery screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
                 <div class="gallery__img">
-                    <img src="images/carousel-section/carousel_1.jpg" class="gallery__img">
+                    <img src="images/carousel-section/carousel_1.jpg" class="gallery__img" alt="carousel image">
                 </div>
             </div>
         </article>
@@ -187,18 +189,18 @@
 
         <h3 class="component-page__section-heading">Work</h3>
 
-        <article id="gallery">
+        <article>
             <h3 class="component__name">.work</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/work.png" width="1000px">
+                <img src="images/screenshots/work.png" width="1000" alt="work section screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
                 <div class="work">
                     <div class="section-heading">The Work</div>
                     <div class="work__wrapper">
-                    <img src="images/work-section/shirakaba-house.jpeg" class="work__img">
+                    <img src="images/work-section/shirakaba-house.jpeg" class="work__img" alt="work section image">
                     <div class="work__text-wrapper">
                         <div class="work__text-border-top">
                             <div class="body"><strong>Superlap</strong></div>
@@ -265,7 +267,7 @@
             <h3 class="component__name">.work__text</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/work__text.png">
+                <img src="images/screenshots/work__text.png" alt="work text screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
@@ -304,11 +306,11 @@
             <h3 class="component__name">.work__img</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/work__img.png">
+                <img src="images/screenshots/work__img.png" alt="work image screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
-                <img src="images/work-section/shirakaba-house.jpeg" class="work__img">
+                <img src="images/work-section/shirakaba-house.jpeg" class="work__img" alt="work section image">
             </div>
         </article>
 
@@ -320,7 +322,7 @@
             <h3 class="component__name">.featured</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/featured.png" width="1000px">
+                <img src="images/screenshots/featured.png" width="1000" alt="features screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
@@ -328,10 +330,10 @@
                     <p class="link__l">Tour<br> Shirakaba<br>House</p>
                     <p class="link__l">Featured<br> Project<br> Hesita</p>
                     <p class="link__l">Shop:<br> Planteary<br> Agenda</p>
-                    <img class="featured__img" src="images/links-section/links_1.jpg">
-                    <img class="featured__img" src="images/links-section/links_2.jpg">
-                    <img class="featured__img" src="images/links-section/links_3.jpg">
-                    <img class="featured__img" src="images/links-section/links_4.jpg">
+                    <img class="featured__img" src="images/links-section/links_1.jpg" alt="feature section image">
+                    <img class="featured__img" src="images/links-section/links_2.jpg" alt="feature section image">
+                    <img class="featured__img" src="images/links-section/links_3.jpg" alt="feature section image">
+                    <img class="featured__img" src="images/links-section/links_4.jpg" alt="feature section image">
                 </div>
             </div>
         </article>
@@ -344,7 +346,7 @@
             <h3 class="component__name">.playlist</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/playlist.png" width="1000px">
+                <img src="images/screenshots/playlist.png" width="1000" alt="playlist screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
@@ -352,9 +354,9 @@
                     <p class="link__l">Playlist<br>Vol.1</p>
                     <p class="link__l">Playlist<br>Vol.2</p>
                     <p class="link__l">Playlist<br>Vol.3</p>
-                    <img class="playlist__img" src="images/playlist-section/playlist_1.jpg">
-                    <img class="playlist__img" src="images/playlist-section/playlist_2.jpg">
-                    <img class="playlist__img" src="images/playlist-section/playlist_3.jpg">
+                    <img class="playlist__img" src="images/playlist-section/playlist_1.jpg" alt="playlist image">
+                    <img class="playlist__img" src="images/playlist-section/playlist_2.jpg" alt="playlist image">
+                    <img class="playlist__img" src="images/playlist-section/playlist_3.jpg" alt="playlist image">
                     <p class="link__m">Play</p>
                     <p class="link__m">Play</p>
                     <p class="link__m">Play</p>
@@ -370,12 +372,12 @@
             <h3 class="component__name">.footer</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/footer.png" width="1000px">
+                <img src="images/screenshots/footer.png" width="1000" alt="footer screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
                 <div class="footer">
-                    <img class="wordmark" src="images/wordmark/shirakaba.svg">
+                    <img class="wordmark" src="images/wordmark/shirakaba.svg" alt="wordmark">
                     <div class="footer__list">
                         <div class="link__footer">Studio</div>
                         <div class="link__footer">Ethos</div>
@@ -391,7 +393,7 @@
             <h3 class="component__name">.footer__list</h3>
             <div class="component__image">
                 <div class="tag"><p>img</p></div>
-                <img src="images/screenshots/footer__list.png" width="1000px">
+                <img src="images/screenshots/footer__list.png" width="1000" alt="footer list screenshot">
             </div>
             <div class="component__code">
                 <div class="tag"><p>code</p></div>
@@ -401,17 +403,11 @@
                         <div class="link__footer">Contact</div>
                         <div class="link__footer">Instagram</div>
                 </div>
-                </div>
             </div>
         </article> 
 
-
-
     </section>
-
-        
   
-
     </div>
 
     </main>
